--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-remark-responsive-iframe": "^3.1.0",
     "gatsby-remark-smartypants": "^3.1.0",
     "gatsby-source-filesystem": "^3.1.0",
+    "gatsby-source-wordpress": "4.0.0",
     "gatsby-transformer-remark": "^3.1.0",
     "gatsby-transformer-sharp": "^3.1.0",
     "prismjs": "^1.23.0",
